[package]
name = "serde_cbor_2"
version = "0.12.0-dev"
authors = [
    "William Brown <william@blackhats.net.au>",
    "(Former) Pyfisch <pyfisch@posteo.org>",
    "(Former) Steven Fackler <sfackler@gmail.com>"
]
repository = "https://github.com/kanidm/cbor"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
half = "1.2.0"
serde = { version = "1.0.14", default-features = false }

[dev-dependencies]
serde_derive = { version = "1.0.14", default-features = false }

[features]
default = ["std"]
# Uses `alloc` library and adds support for vector functions with
# `no_std`.
alloc = ["serde/alloc"]
std = ["serde/std" ]
unsealed_read_write = []
tags = []
