[package]
name = "serde_cbor_2"
version = "0.12.0-dev"
authors = [
    "William Brown <william@blackhats.net.au>",
    "(Former) Pyfisch <pyfisch@posteo.org>",
    "(Former) Steven Fackler <sfackler@gmail.com>"
]
repository = "https://github.com/kanidm/cbor"
license = "MIT/Apache-2.0"
description = "CBOR support for Serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2021"
rust-version = "1.70"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
# Uses `alloc` library and adds support for vector functions with
# `no_std`.
alloc = ["serde/alloc"]
std = ["serde/std" ]
unsealed_read_write = []
tags = []

[dependencies]
half = { version = "2", default-features = false }
serde = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
